Bug 1158218 Follow-up to fix mis-indentation. DONTBUILD, whitespace-only r=me